//Using the version of protobuf
syntax = "proto3";

        message AppControls {
enum Command {
    NO_CMD = 0;
    START = 1;
    STOP = 2;
    PAUSE = 3;
    GO_HOME = 4;
    SET_HOME = 5;
    BEGIN_TRACKING = 6;
    FINISH_TRACKING = 7;
    REBOOT = 8;
    SHUTDOWN = 9;
}
    message JoyStick {
        double x = 1; // -1 to 1
        double y = 2; // -1 to 1
        }

        Command cmd = 1;
        JoyStick joy = 2;
        }

        message LawnmowerStatus {
enum Status {
    READY = 0;
    MOWING = 1;
    PAUSED = 2;
    MANUAL = 3;
    TRACKING = 4;
    LOW_LIGHT = 5;
}
enum Error {
    NO_ERROR = 0;
    ROBOT_STUCK = 1;
    BLADE_STUCK = 2;
    PICKUP = 3;
    LOST = 4;
}

    float battery_state = 1; // in percent
    double mowing_progress = 2; // in percent
    Status status = 3;
    double latitude = 4; // in degrees
    double longitude = 5; // in degrees
    Error error = 13;
    string error_msg = 14;
    bool mowing_finished = 15;
}